# FirstLinuxOpenGL

./: .gitignore  CMakeLists.txt  README.md
src/: get_shader.hpp  main.cpp
